[REFACTOR] 세션 조회 수정 #32